--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Productos</title>
 </head>
@@ -12,86 +13,48 @@
         <section class="productos__grilla">
             <ul class="filtros">
                 <li class="filtros__lista"> <input class="form-check-input" type="checkbox">  MOUSES</li>
-                <li class="filtros__lista"> <input class="form-check-input" type="checkbox">  ALFOMBRILLAS</li>
-                <li class="filtros__lista"> <input class="form-check-input" type="checkbox">  VOLANTES</li>
-                <li class="filtros__lista"> <input class="form-check-input" type="checkbox">  BUNGEES</li>
+                <li class="filtros__lista"> <input class="form-check-input" type="checkbox">  *</li>
+                <li class="filtros__lista"> <input class="form-check-input" type="checkbox">  *</li>
+                <li class="filtros__lista"> <input class="form-check-input" type="checkbox">  *</li>
             </ul>
-
-            <!--Productos-->
-            <article class="card productos">
-                <img src="img/Producto1.png" class="card-img-top" alt="Imagen de un mouse razer">
-                <div class="card-body">
-                    <h2 class="productos__nombre">Razer DeathAdder V2</h2>
-                    <h3 class="productos__nombre">$500</h3>
-                    <button class="productos_btn_color"><a class="">Agregar</a></button>
-                </div>
-            </article>
-            <article class="card productos">
-                <img src="img/Producto2.png" class="card-img-top" alt="Imagen de un mouse rosa">
-                <div class="card-body">
-                    <h2 class="productos__nombre">Onikuma CW905</h2>
-                    <h3 class="productos__nombre">$1000</h3>
-                    <button class="productos_btn_color"><a class="">Agregar</a></button>
-                </div>
-            </article>
-            <article class="card productos">
-                <img src="img/Producto3.png" class="card-img-top" alt="Imagen de un mouse rgb redragon">
-                <div class="card-body">
-                    <h2 class="productos__nombre">Redragon King Cobra</h2>
-                    <h3 class="productos__nombre">$2000</h3>
-                    <button class="productos_btn_color"><a class="">Agregar</a></button>
-                </div>
-            </article>
-            <article class="card productos">
-                <img src="img/Producto4.png" class="card-img-top" alt="Imagen de un mouse noga rgb">
-                <div class="card-body">
-                    <h2 class="productos__nombre">Centrophorus v2</h2>
-                    <h3 class="productos__nombre">$2500</h3>
-                    <button class="productos_btn_color"><a class="">Agregar</a></button>
-                </div>
-            </article>
-            <article class="card productos">
-                <img src="img/Producto5.png" class="card-img-top" alt="Imagen de un mouse blanco con agujeritos">
-                <div class="card-body">
-                    <h2 class="productos__nombre">Storm Elite M988</h2>
-                    <h3 class="productos__nombre">$750</h3>
-                    <button class="productos_btn_color"><a class="">Agregar</a></button>
-                </div>
-            </article>
-            <article class="card productos">
-                <img src="img/Producto6.png" class="card-img-top" alt="Imagen de un mouse HP">
-                <div class="card-body">
-                    <h2 class="productos__nombre">HP M260 Black</h2>
-                    <h3 class="productos__nombre">$550</h3>
-                    <button class="productos_btn_color"><a class="">Agregar</a></button>
-                </div>
-            </article>
-            <article class="card productos">
-                <img src="img/Producto7.png" class="card-img-top" alt="Imagen de un mouse HP rgb">
-                <div class="card-body">
-                    <h2 class="productos__nombre"> HP M160 RGB</h2>
-                    <h3 class="productos__nombre">$3000</h3>
-                    <button class="productos_btn_color"><a class="">Agregar</a></button>
-                </div>
-            </article>
-            <article class="card productos">
-                <img src="img/Producto8.png" class="card-img-top" alt="Imagen de un mouse Xgenius rgb">
-                <div class="card-body">
-                    <h2 class="productos__nombre">Soul XM550</h2>
-                    <h3 class="productos__nombre">$3250</h3>
-                    <button class="productos_btn_color"><a class="">Agregar</a></button>
-                </div>
-            </article>
-            <article class="card productos">
-                <img src="img/Producto9.png" class="card-img-top" alt="Imagen de un mouse Logitech">
-                <div class="card-body">
-                    <h2 class="productos__nombre">G903</h2>
-                    <h3 class="productos__nombre">$5000</h3>
-                    <button class="productos_btn_color"><a class="">Agregar</a></button>
-                </div>
-            </article>
         </section>
 
+        <section class="productos__grilla" id="productoss"></section>
+
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+            Carrito
+        </button>
+
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Carrito</h5>
+                  <button type="button" class="btn-close productos_btn_color" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <table class="table">
+                      <thead>
+                        <tr>
+                          <th scope="col">#</th>
+                          <th scope="col">Nombre</th>
+                          <th scope="col">Cantidad</th>
+                          <th scope="col">Precio</th>
+                        </tr>
+                      </thead>
+                      <tbody id="carritoLista">
+                       
+                      </tbody>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="scripts/index.js"></script>
 
     </main>
