--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
         </section>
 
         <section>
-          <form>
+          <form class="mb-5">
             <label for="correo" class="form-label">Correo Electronico</label>
 					  <input type="email" class="form-control" id="correo">
-            <label for="Contraseña" class="form-label">Contraseña</label>
+            <label for="Contraseña" class="form-label mt-3">Contraseña</label>
 					  <input type="password" class="form-control" id="Contraseña">
+            <input type="submit" class="btn btn-primary btn-lg btn-block mt-3 w-100" id="btnEnviar" value="Ingresar">
           </form>
         </section>
 
@@ -63,6 +64,7 @@
             </div>
         </div>
 
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
         <script src="scripts/index.js"></script>
 
